# cchain

./: .gitignore  Cargo.toml  README.md  cchain_auto_git.json  cchain_concurrent_curl.json  cchain_environment_variables_override_example.json  cchain_template.json  cchain_test.json  setup.sh  uninstall.sh
.github/workflows/: cargo_publish.yml  release.yml  rust.yml
docs/: JSON_schema.md  LLM_setup.md
examples/: cchain_auto_fetch.json  cchain_command_failure_handling.json  cchain_concurrent_curl.json  cchain_environment_variables_override_example.json  cchain_input_parameters.json  cchain_input_parameters_incorrect.json  cchain_intepreter_declaration.json  cchain_llm_function.json  cchain_on_program_execution.json  cchain_working_directory.json
src/: arguments.rs  bookmark.rs  chain.rs  command.rs  configuration.rs  display_control.rs  function.rs  lib.rs  main.rs  program.rs  utility.rs  variable.rs
src/cli/: chain.rs  command.rs  concurrency.rs  interpreter.rs  mod.rs  options.rs  program.rs  traits.rs
src/commons/: errors.rs  mod.rs  naming.rs  packages.rs  shell.rs  utility.rs
src/core/: chain.rs  command.rs  interpreter.rs  mod.rs  options.rs  program.rs  traits.rs
src/generations/: create.rs  llm.rs  mod.rs
src/marker/: bookmark.rs  mod.rs  reference.rs
tests/: chain_test.rs  command_test.rs  function_test.rs  program_test.rs  variable_test.rs
