[package]
name = "cchain"
version = "0.1.7"
edition = "2021"
description = "A command line chain execution tool"
authors =  ["Xinyu Bao <baoxinyuworks@163.com>"]
readme = "README.md"
repository = "https://github.com/aspadax/cchain"
license = "MIT"

[dependencies]
anyhow = "1.0.95"
async-openai = "0.27.2"
clap = { version = "4.5.27", features = ["derive"] }
dirs = "6.0.0"
log = "0.4.25"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
simple_logger = "5.0.0"
tokio = { version = "1.43.0", features = ["full"] }
